@@ -39,6 +39,12 @@
             <artifactId>util-mmap</artifactId>
             <version>1.0.52-3042601</version>
         </dependency>
+        <dependency>
+            <groupId>com.kohlschutter.junixsocket</groupId>
+            <artifactId>junixsocket-core</artifactId>
+            <version>2.8.1</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
@@ -124,6 +130,19 @@
                                         <argument>-Xmx12G</argument>
                                         <argument>-ea</argument>
                                         <argument>io.github.jbellis.jvector.example.Bench</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>annbench</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-Xmx3G</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.AnnBenchRunner</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
